--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type = 'module'></script>
   <title>Кексобукинг</title>
 </head>
 <body>
@@ -230,6 +230,5 @@
       <button type="button" class="error__button">Попробовать снова</button>
     </div>
   </template>
-  <script src = "https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js"></script>
 </body>
 </html>
