--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Фильтрация объявлений -->
     <div class="map__filters-container">
-      <form action="#" class="map__filters" autocomplete="off">
+      <form action="https://24.javascript.pages.academy/keksobooking " method="post" enctype="multipart/form-data" class="map__filters" autocomplete="off">
         <select name="housing-type" id="housing-type" class="map__filter">
           <option value="any" selected>Любой тип жилья</option>
           <option value="bungalow">Бунгало</option>
@@ -84,7 +84,7 @@
             <img src="img/muffin-grey.svg" alt="Аватар пользователя" width="40" height="44">
           </div>
           <div class="ad-form__field">
-            <input type="file" id="avatar" name="avatar" class="ad-form-header__input visually-hidden">
+            <input type="file" id="avatar" name="avatar" class="ad-form-header__input visually-hidden" accept="image/png, image/jpeg">
             <label class="ad-form-header__drop-zone" for="avatar">Загрузить<br>фото...</label>
           </div>
           <p class="ad-form-header__info">Заполните все обязательные поля, назначьте цену, загрузите аватар и фото
@@ -174,7 +174,7 @@
         <label class="ad-form__label">Фотография жилья</label>
         <div class="ad-form__photo-container">
           <div class="ad-form__upload">
-            <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
+            <input type="file" id="images" name="images" class="ad-form__input visually-hidden" accept="image/png, image/jpeg">
             <label for="images" class="ad-form__drop-zone">Загрузить<br>фото...</label>
           </div>
           <div class="ad-form__photo"></div>
