--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="map">
 
     <!-- Блок для вставки карты -->
-    <div class="map__canvas" id="map-canvas" style="width: 1280px;"></div>
+    <div class="map__canvas" id="map-canvas"></div>
 
     <!-- Фильтрация объявлений -->
     <div class="map__filters-container">
