--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </fieldset>
       <fieldset class="ad-form__element ad-form__element--wide">
         <label class="ad-form__label" for="address">Адрес (координаты)</label>
-        <input id="address" name="address" type="text">
+        <input id="address" name="address" type="text" value="LatLng(35.65284, 139.83947)">
       </fieldset>
       <fieldset class="ad-form__element">
         <label class="ad-form__label" for="type">Тип жилья</label>
