--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- Форма объявления -->
   <section class="notice">
     <h2 class="notice__title">Ваше объявление</h2>
-    <form class="ad-form" method="post" enctype="multipart/form-data" action="https://24.javascript.pages.academy/keksobooking" autocomplete="off">
+    <form class="ad-form" action="" enctype="multipart/form-data" method="post" autocomplete="off">
       <fieldset class="ad-form-header">
         <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
         <div class="ad-form-header__upload">
@@ -99,7 +99,7 @@
       </fieldset>
       <fieldset class="ad-form__element ad-form__element--wide">
         <label class="ad-form__label" for="address">Адрес (координаты)</label>
-        <input id="address" name="address" type="text" value="LatLng(35.65284, 139.83947)">
+        <input id="address" name="address" type="text">
       </fieldset>
       <fieldset class="ad-form__element">
         <label class="ad-form__label" for="type">Тип жилья</label>
