--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- Форма объявления -->
   <section class="notice">
     <h2 class="notice__title">Ваше объявление</h2>
-    <form class="ad-form" action="" enctype="multipart/form-data" method="post" autocomplete="off">
+    <form class="ad-form" action="https://24.javascript.pages.academy/keksobooking" enctype="multipart/form-data" method="post" autocomplete="off">
       <fieldset class="ad-form-header">
         <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
         <div class="ad-form-header__upload">
